[package]
name = "advanced-cryptographic-system"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.8"
bitvec = "1.0"
thiserror = "1.0"
itertools = "0.12"
sha3 = "0.10"
blake3 = "1.5"
ark-ff = "0.4"
ark-poly = "0.4"
ark-ec = "0.4"
merlin = "3.0"
digest = "0.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
quickcheck = "1.0"
test-case = "3.3"

[[bench]]
name = "reed_muller_bench"
harness = false